# fffinder

./: .env  .gitignore  Makefile  README.md  pyproject.toml  render.yaml  render.yml
.github/workflows/: lint.yaml
src/fffinderbase/: manage.py
src/fffinderbase/crawler/: pipeline.py  spyder.py
src/fffinderbase/crawls/: mr.py
src/fffinderbase/fffinder/: asgi.py  settings.py  urls.py  wsgi.py
src/fffinderbase/fffinder/management/commands/: runspider.py
src/fffinderbase/knbase/: admin.py  models.py
src/fffinderbase/knbase/migrations/: 0001_initial.py  0002_outboundlink.py
