[project]
name = "fffinderbase"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "voidfiles", email = "voidfiles@gmail.com" }
]
dependencies = [
    "django>=5.0.6",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.2.0",
    "django-extensions>=3.2.3",
    "whitenoise[brotli]>=6.6.0",
    "gunicorn>=22.0.0",
    "uvicorn>=0.30.1",
    "diskcache>=5.6.3",
    "w3lib>=2.2.1",
    "url-normalize>=1.4.3",
    "scrapy>=2.11.2",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0.post0",
    "isort>=5.13.2",
    "black>=24.4.2",
    "flake8>=7.1.0",
    "autopep8>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fffinderbase"]

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"
